# harfruzz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: Cargo.toml
benches/src/: lib.rs
docs/: backporting.md  ragel.md
examples/: shape.rs
scripts/: gen-indic-table.py  gen-shaping-tests.py  gen-tag-table.py  gen-vowel-constraints.py
src/: lib.rs
src/hb/: aat_layout.rs  aat_layout_common.rs  aat_layout_kerx_table.rs  aat_layout_morx_table.rs  aat_layout_trak_table.rs  aat_map.rs  aat_tables.rs  algs.rs  buffer.rs  cache.rs  charmap.rs  common.rs  face.rs  glyph_metrics.rs  glyph_names.rs  kerning.rs  mod.rs  ot_layout.rs  ot_layout_common.rs  ot_layout_gpos_table.rs  ot_layout_gsub_table.rs  ot_layout_gsubgpos.rs  ot_map.rs  ot_shape.rs  ot_shape_fallback.rs  ot_shape_normalize.rs  ot_shape_plan.rs  ot_shaper.rs  ot_shaper_arabic.rs  ot_shaper_hangul.rs  ot_shaper_hebrew.rs  ot_shaper_indic.rs  ot_shaper_indic_table.rs  ot_shaper_khmer.rs  ot_shaper_myanmar.rs  ot_shaper_myanmar_machine.rl  ot_shaper_myanmar_machine.rs  ot_shaper_syllabic.rs  ot_shaper_thai.rs  ot_shaper_use.rs  (+14 more)
src/hb/aat/: mod.rs
src/hb/fonta/: font.rs  mod.rs  set_digest.rs
src/hb/fonta/ot/: contextual.rs  lookup_cache.rs  mod.rs
src/hb/fonta/ot/gpos/: cursive.rs  mark.rs  mod.rs  pair.rs  single.rs
src/hb/fonta/ot/gsub/: alternate.rs  ligature.rs  mod.rs  multiple.rs  reverse_chain.rs  single.rs
src/hb/ot/: contextual.rs  lookup.rs  mod.rs
src/hb/ot/gpos/: cursive.rs  mark.rs  mod.rs  pair.rs  single.rs
src/hb/ot/gsub/: alternate.rs  ligature.rs  mod.rs  multiple.rs  reverse_chain.rs  single.rs
src/hb/ot/layout/GPOS/: mark_lig_pos.rs
src/hb/ot/layout/GSUB/: ligature.rs  reverse_chain_single_subst.rs
tests/custom/: bugs.tests  colr.tests  macos.tests
tests/shaping/: aots.rs  custom.rs  in_house.rs  macos.rs  main.rs  text_rendering_tests.rs
