[package]
name = "harfruzz"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"  # should match https://github.com/googlefonts/fontations/blob/main/Cargo.toml
description = "A complete harfbuzz shaping algorithm port to Rust."
documentation = "https://docs.rs/harfruzz/"
readme = "README.md"
repository = "https://github.com/harfbuzz/harfruzz"
license = "MIT"
keywords = ["text", "shaping", "opentype", "truetype"]
categories = ["text-processing"]
exclude = ["benches/", "tests/"]

[dependencies]
bitflags = "2.9"
bytemuck = { version = "1.22", features = ["extern_crate_alloc"] }
core_maths = "0.1" # only for no_std builds
smallvec = "1.14"
wasmi = { version = "0.40", optional = true }
log = "0.4"
read-fonts = { version = "0.29.2", default-features = false, features = ["libm"] }

# TODO: remove entirely
[dependencies.ttf-parser]
version = "0.25"
default-features = false
features = [
    "opentype-layout",
    "apple-layout",
    "variable-fonts",
    "glyph-names",
    "no-std-float",
]

[features]
default = ["std"]
std = ["ttf-parser/std", "read-fonts/std"]
wasm-shaper = ["std", "dep:wasmi"]

[dev-dependencies]
pico-args = { version = "0.5", features = ["eq-separator"] }
libc = "0.2"
