[package]
name = "harfruzz"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"  # should match https://github.com/googlefonts/fontations/blob/main/Cargo.toml
description = "A complete harfbuzz shaping algorithm port to Rust."
documentation = "https://docs.rs/harfruzz/"
readme = "README.md"
repository = "https://github.com/harfbuzz/harfruzz"
license = "MIT"
keywords = ["text", "shaping", "opentype", "truetype"]
categories = ["text-processing"]
exclude = ["benches/", "tests/"]

[dependencies]
bitflags = "2.9"
bytemuck = { version = "1.22", features = ["extern_crate_alloc"] }
core_maths = "0.1" # only for no_std builds
smallvec = "1.14"
read-fonts = { version = "0.29.3", default-features = false, features = ["libm"] }

[features]
default = ["std"]
std = ["read-fonts/std"]

[dev-dependencies]
pico-args = { version = "0.5", features = ["eq-separator"] }
libc = "0.2"
